fix formatter's format errors amd update comments